minikube/0905/fortune/fortune-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-nodeport
spec:
  type: NodePort
  selector:
    app: fortune
  ports:
    - port: 80
      targetPort: fortune
